--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "geist": "^1.3.1",
     "googleapis": "^144.0.0",
     "js-base64": "^3.7.7",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "next-auth": "^5.0.0-beta.25",
@@ -49,10 +50,12 @@
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.4",
+    "uuid": "^11.0.3",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
