--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
     "geist": "^1.3.1",
+    "google-auth-library": "^9.15.0",
     "googleapis": "^144.0.0",
     "js-base64": "^3.7.7",
     "lodash": "^4.17.21",
@@ -58,6 +59,7 @@
     "react-resizable-panels": "^2.1.6",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "ua-parser-js": "^2.0.0",
     "use-debounce": "^10.0.4",
     "uuid": "^11.0.3",
     "zod": "^3.23.8"
@@ -70,9 +72,12 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ua-parser-js": "^0.7.39",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "fs-extra": "^11.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "jwks-rsa": "^3.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
