--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@tiptap/pm": "^2.9.1",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
+    "@types/quoted-printable": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
@@ -52,6 +53,7 @@
     "next-auth": "^5.0.0-beta.25",
     "nodemailer": "^6.9.16",
     "prisma": "^5.22.0",
+    "quoted-printable": "^1.0.1",
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-hook-form": "^7.53.2",
