--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "geist": "^1.3.1",
     "google-auth-library": "^9.15.0",
     "googleapis": "^144.0.0",
