- WIP - working on adding queue, reddis and making the project api friendly.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,6 +31,9 @@
       ],
       "@/lib": [
         "./src/lib/*"
+      ],
+      "@/env": [
+        "./src/env.ts"
       ]
     },
     "noImplicitAny": true
