--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "worker": "tsx -r dotenv/config src/worker.ts"
   },
   "dependencies": {
     "@auth/core": "^0.37.3",
@@ -40,20 +41,25 @@
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
     "@types/quoted-printable": "^1.0.2",
+    "bull": "^4.12.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "dotenv": "^16.4.7",
     "geist": "^1.3.1",
     "google-auth-library": "^9.15.0",
     "googleapis": "^144.0.0",
+    "ioredis": "^5.3.2",
     "js-base64": "^3.7.7",
     "lodash": "^4.17.21",
     "lucide-react": "^0.456.0",
     "next": "15.0.3",
     "next-auth": "^5.0.0-beta.25",
     "nodemailer": "^6.9.16",
+    "pino": "^8.17.0",
+    "pino-pretty": "^10.3.0",
     "prisma": "^5.22.0",
     "quoted-printable": "^1.0.1",
     "react": "19.0.0-rc-66855b96-20241106",
@@ -85,6 +91,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.6.3"
   }
 }
