--- a/apps/queue/package.json
+++ b/apps/queue/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@mailjot/database": "*",
+        "@mailjot/types": "*",
         "bull": "^4.12.0",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
