- WIP - Working on adding env variables to run across apps - Queue still not working

--- a/apps/queue/package.json
+++ b/apps/queue/package.json
@@ -2,6 +2,7 @@
     "name": "@mailjot/queue",
     "version": "0.1.0",
     "private": true,
+    "type": "module",
     "scripts": {
         "build": "tsup",
         "dev": "tsup --watch",
