--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -2,15 +2,20 @@
     "name": "@mailjot/types",
     "version": "0.0.1",
     "private": true,
+    "type": "module",
     "main": "./dist/index.js",
-    "module": "./dist/index.mjs",
+    "module": "./dist/index.js",
     "types": "./dist/index.d.ts",
     "sideEffects": false,
     "files": [
         "dist/**"
     ],
     "exports": {
-        ".": "./src/index.ts"
+        ".": {
+            "types": "./dist/index.d.ts",
+            "import": "./dist/index.js",
+            "require": "./dist/index.cjs"
+        }
     },
     "scripts": {
         "dev": "tsup src/index.ts --format esm,cjs --dts --watch",
