--- a/apps/queue/package.json
+++ b/apps/queue/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "build": "tsup",
-        "dev": "tsup --watch",
+        "dev": "concurrently \"tsup --watch\" \"nodemon dist/server.js\"",
         "start": "node dist/server.js",
         "lint": "eslint \"src/**/*.ts\"",
         "clean": "rimraf .turbo node_modules dist"
@@ -26,6 +26,8 @@
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/node": "^20.10.4",
+        "concurrently": "^8.2.2",
+        "nodemon": "^3.0.2",
         "rimraf": "^5.0.5",
         "tsup": "^8.0.1",
         "typescript": "^5.3.3"
