--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,31 @@
 {
     "$schema": "https://turbo.build/schema.json",
     "globalDependencies": [
-        "**/.env.*local"
+        "**/.env.*",
+        ".env"
+    ],
+    "globalPassThroughEnv": [
+        "APP_ENV",
+        "NODE_ENV",
+        "USE_SMTP_DUAL_DELIVERY",
+        "NEXTAUTH_SECRET",
+        "PUBSUB_VERIFICATION_TOKEN",
+        "APOLLO_API_KEY",
+        "DATABASE_URL",
+        "REDIS_HOST",
+        "REDIS_PORT",
+        "REDIS_PASSWORD",
+        "GOOGLE_*",
+        "NEXTAUTH_URL",
+        "NEXT_PUBLIC_*",
+        "QUEUE_API_URL",
+        "NGROK_URL",
+        "PUBSUB_*",
+        "CRON_SECRET",
+        "GMAIL_*"
+    ],
+    "globalEnv": [
+        "*"
     ],
     "tasks": {
         "build": {
@@ -10,15 +34,66 @@
             ],
             "outputs": [
                 "dist/**",
-                ".next/**",
-                "!.next/cache/**"
+                ".next/**"
+            ]
+        },
+        "dev": {
+            "cache": false,
+            "persistent": true,
+            "dependsOn": [
+                "^build"
+            ],
+            "inputs": [
+                "$TURBO_DEFAULT$",
+                ".env.production.local",
+                ".env.local",
+                ".env.production",
+                "**/.env.*",
+                "**/.env",
+                ".env"
+            ],
+            "env": [
+                "USE_SMTP_DUAL_DELIVERY",
+                "NEXTAUTH_SECRET",
+                "PUBSUB_VERIFICATION_TOKEN",
+                "APOLLO_API_KEY",
+                "DATABASE_URL",
+                "REDIS_HOST",
+                "REDIS_PORT",
+                "REDIS_PASSWORD",
+                "GOOGLE_*",
+                "NEXTAUTH_URL",
+                "NEXT_PUBLIC_*",
+                "QUEUE_API_URL",
+                "NGROK_URL",
+                "PUBSUB_*",
+                "CRON_SECRET",
+                "GMAIL_*"
+            ]
+        },
+        "web#dev": {
+            "cache": false,
+            "persistent": true,
+            "env": [
+                "USE_SMTP_DUAL_DELIVERY",
+                "NEXTAUTH_SECRET",
+                "PUBSUB_VERIFICATION_TOKEN",
+                "APOLLO_API_KEY",
+                "DATABASE_URL",
+                "REDIS_HOST",
+                "REDIS_PORT",
+                "REDIS_PASSWORD",
+                "GOOGLE_*",
+                "NEXTAUTH_URL",
+                "NEXT_PUBLIC_*",
+                "QUEUE_API_URL",
+                "NGROK_URL",
+                "PUBSUB_*",
+                "CRON_SECRET",
+                "GMAIL_*"
             ]
         },
         "lint": {},
-        "dev": {
-            "cache": false,
-            "persistent": true
-        },
         "clean": {
             "cache": false
         }
