--- a/packages/database/turbo.json
+++ b/packages/database/turbo.json
@@ -9,6 +9,9 @@
             ],
             "outputs": [
                 "dist/**"
+            ],
+            "inputs": [
+                "$TURBO_DEFAULT$"
             ]
         },
         "dev": {
