--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
         "packages/*"
     ],
     "devDependencies": {
+        "i": "^0.3.7",
+        "npm": "^10.9.2",
         "prettier": "^3.1.0",
         "turbo": "^2.3.3"
     }
