Refactor environment variable handling and improve monitoring service metrics
- Updated .gitignore to include local and production environment files.
- Refactored config.ts to load environment variables from a more structured path.
- Enhanced envSchema validation for DATABASE_URL and added error handling for environment variable parsing.
- Improved monitoring service to handle potential null values for email stats, ensuring more robust health metrics calculations.
- Updated package.json for the database package to streamline scripts and dependencies, including changes to the versioning and module exports.

--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,15 @@ next-env.d.ts
 .next
 
 # Environment variables
-.env
-env/**/.env.*
-!env/**/.env.*.example
+.env.local
+.env.*.local
+.env.production
+**/env/.env.*
+!**/env/.env.*.example
+
+# Keep env examples
+!.env.example
+!apps/*/.env.example
+!packages/*/.env.example
+!apps/*/.env.development
+!packages/*/.env.development
