--- a/apps/queue/package.json
+++ b/apps/queue/package.json
@@ -8,28 +8,37 @@
         "dev": "concurrently \"tsup --watch\" \"nodemon dist/server.js\"",
         "start": "node dist/server.js",
         "lint": "eslint \"src/**/*.ts\"",
-        "clean": "rimraf .turbo node_modules dist"
+        "clean": "rimraf .turbo node_modules dist",
+        "test": "jest",
+        "typecheck": "tsc --noEmit"
     },
     "dependencies": {
         "@mailjot/database": "*",
         "@mailjot/types": "*",
-        "bull": "^4.12.0",
+        "bull": "^4.11.3",
         "cors": "^2.8.5",
+        "date-fns": "^2.30.0",
+        "date-fns-tz": "^2.0.0",
         "dotenv": "^16.3.1",
-        "express": "^4.21.2",
+        "express": "^4.18.2",
+        "googleapis": "^126.0.1",
         "ioredis": "^5.3.2",
-        "pino": "^8.21.0",
-        "pino-pretty": "^10.3.1"
+        "pino": "^8.15.1",
+        "pino-pretty": "^10.2.0"
     },
     "devDependencies": {
         "@types/bull": "^4.10.0",
-        "@types/cors": "^2.8.17",
-        "@types/express": "^4.17.21",
-        "@types/node": "^20.10.4",
+        "@types/cors": "^2.8.13",
+        "@types/express": "^4.17.17",
+        "@types/node": "^20.6.0",
         "concurrently": "^8.2.2",
+        "eslint": "^8.49.0",
+        "jest": "^29.7.0",
         "nodemon": "^3.0.2",
         "rimraf": "^5.0.5",
+        "ts-jest": "^29.1.1",
+        "ts-node-dev": "^2.0.0",
         "tsup": "^8.0.1",
-        "typescript": "^5.3.3"
+        "typescript": "^5.2.2"
     }
 }
