Refactor environment variable management and enhance database scripts
- Updated turbo.json to include global environment variables and dependencies for better configuration management.
- Modified layout.tsx to remove console logging of environment variables for cleaner output.
- Enhanced package.json in the database package with dotenv support for various database commands, improving development and production workflows.
- Updated turbo.json in the database package to define caching and environment variables for database tasks, ensuring consistent behavior across environments.

--- a/packages/database/turbo.json
+++ b/packages/database/turbo.json
@@ -3,20 +3,76 @@
         "//"
     ],
     "tasks": {
-        "build": {
-            "dependsOn": [
-                "^build"
-            ],
-            "outputs": [
-                "dist/**"
-            ],
-            "inputs": [
-                "$TURBO_DEFAULT$"
+        "db:generate": {
+            "cache": false
+        },
+        "db:migrate": {
+            "cache": false,
+            "env": [
+                "DATABASE_URL",
+                "SHADOW_DATABASE_URL"
             ]
         },
-        "dev": {
+        "db:migrate:create": {
             "cache": false,
-            "persistent": true
+            "env": [
+                "DATABASE_URL"
+            ]
+        },
+        "db:deploy": {
+            "cache": false,
+            "env": [
+                "DATABASE_URL"
+            ]
+        },
+        "db:push": {
+            "cache": false,
+            "env": [
+                "DATABASE_URL"
+            ]
+        },
+        "db:seed": {
+            "cache": false,
+            "env": [
+                "DATABASE_URL"
+            ]
+        },
+        "db:reset": {
+            "cache": false,
+            "env": [
+                "DATABASE_URL",
+                "SHADOW_DATABASE_URL"
+            ]
+        },
+        "db:studio": {
+            "cache": false,
+            "env": [
+                "DATABASE_URL"
+            ]
+        },
+        "db:deploy:staging": {
+            "cache": false,
+            "env": [
+                "DATABASE_URL"
+            ]
+        },
+        "db:seed:staging": {
+            "cache": false,
+            "env": [
+                "DATABASE_URL"
+            ]
+        },
+        "db:deploy:prod": {
+            "cache": false,
+            "env": [
+                "DATABASE_URL"
+            ]
+        },
+        "db:seed:prod": {
+            "cache": false,
+            "env": [
+                "DATABASE_URL"
+            ]
         }
     }
 }
