--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -9,17 +9,27 @@
         "dist/**"
     ],
     "scripts": {
+        "dev": "tsup --watch",
         "build": "tsup",
         "clean": "rm -rf .turbo node_modules dist",
         "db:generate": "prisma generate",
-        "db:push": "node -r ts-node/register ./prisma.config.ts && prisma db push --skip-generate",
-        "db:migrate": "node -r ts-node/register ./prisma.config.ts && prisma migrate dev",
-        "db:deploy": "node -r ts-node/register ./prisma.config.ts && prisma migrate deploy",
-        "db:reset": "node -r ts-node/register ./prisma.config.ts && prisma migrate reset --force",
-        "db:seed": "node -r ts-node/register ./prisma.config.ts && prisma db seed",
-        "dev": "tsup --watch",
+        "# Development commands": "",
+        "db:migrate": "dotenv -e env/.env.development -- prisma migrate dev",
+        "db:migrate:create": "dotenv -e env/.env.development -- prisma migrate dev --create-only",
+        "db:deploy": "dotenv -e env/.env.development -- prisma migrate deploy",
+        "db:push": "dotenv -e env/.env.development -- prisma db push --skip-generate",
+        "db:seed": "dotenv -e env/.env.development -- prisma db seed",
+        "db:reset": "dotenv -e env/.env.development -- prisma migrate reset --force",
+        "db:studio": "dotenv -e env/.env.development -- prisma studio",
+        "# Staging commands": "",
+        "db:deploy:staging": "dotenv -e env/.env.staging -- prisma migrate deploy",
+        "db:seed:staging": "dotenv -e env/.env.staging -- prisma db seed",
+        "# Production commands": "",
+        "db:deploy:prod": "dotenv -e env/.env.production -- prisma migrate deploy",
+        "db:seed:prod": "dotenv -e env/.env.production -- prisma db seed",
         "lint": "eslint .",
-        "type-check": "tsc --noEmit"
+        "type-check": "tsc --noEmit",
+        "postbuild": "npm run db:deploy"
     },
     "dependencies": {
         "@prisma/client": "^5.7.0"
@@ -27,8 +37,8 @@
     "devDependencies": {
         "@types/node": "^20.10.4",
         "dotenv": "^16.4.7",
+        "dotenv-cli": "^7.3.0",
         "prisma": "^5.7.0",
-        "ts-node": "^10.9.1",
         "rimraf": "^5.0.5",
         "tsup": "^8.0.1",
         "typescript": "^5.3.3"
