Enhance database management scripts and refactor scheduling services
- Added new database management scripts to package.json for PostgreSQL operations, including migration, push, and reset commands.
- Updated scheduling service to use `utcToZonedTime` instead of `toZonedTime` for improved timezone handling.
- Refactored timing service to replace `toZonedTime` and `fromZonedTime` with `utcToZonedTime` and `zonedTimeToUtc`, ensuring consistency in time conversions.
- Removed outdated environment variable management scripts from the database package, streamlining the codebase.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,16 @@
         "redis:up": "docker-compose up -d redis",
         "redis:down": "docker-compose down",
         "redis:logs": "docker-compose logs -f redis",
-        "dev:with-redis": "npm run redis:up && npm run dev"
+        "dev:with-redis": "npm run redis:up && npm run dev",
+        "db:up": "docker-compose up -d postgres",
+        "db:down": "docker-compose down",
+        "db:logs": "docker-compose logs -f postgres",
+        "db:migrate": "cd packages/database && dotenv -e .env -- npx prisma migrate dev",
+        "db:push": "cd packages/database && dotenv -e .env -- npx prisma db push",
+        "db:reset": "cd packages/database && dotenv -e .env -- npx prisma migrate reset --force",
+        "services:up": "docker-compose up -d",
+        "services:down": "docker-compose down",
+        "dev:with-services": "npm run services:up && npm run dev"
     },
     "engines": {
         "node": ">=20"
