Update package dependencies, enhance logging, and refactor sequence processing
- Added `pino-http` for improved HTTP request logging in the queue service.
- Updated `NODE_OPTIONS` in package.json scripts to optimize memory usage during development.
- Refactored TypeScript configuration to include path mappings for better module resolution.
- Enhanced error handling and logging in the server to capture unhandled errors and provide clearer status messages.
- Introduced a new endpoint for retrieving queue status, improving monitoring capabilities.
- Removed outdated queue service implementation to streamline the codebase.

--- a/apps/queue/tsconfig.json
+++ b/apps/queue/tsconfig.json
@@ -17,7 +17,22 @@
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
         "noEmit": false,
-        "incremental": false
+        "incremental": false,
+        "baseUrl": ".",
+        "paths": {
+            "@/*": [
+                "./src/*"
+            ],
+            "@/lib/*": [
+                "./src/lib/*"
+            ],
+            "@/types/*": [
+                "./src/types/*"
+            ],
+            "@/env": [
+                "./src/env.ts"
+            ]
+        }
     },
     "include": [
         "src/**/*"
