--- a/apps/queue/package.json
+++ b/apps/queue/package.json
@@ -5,8 +5,8 @@
     "type": "module",
     "scripts": {
         "build": "tsup",
-        "dev": "concurrently \"tsup --watch\" \"nodemon dist/server.js\"",
-        "start": "node dist/server.js",
+        "dev": "concurrently \"tsup --watch\" \"NODE_OPTIONS='--max-old-space-size=4096' nodemon --max-old-space-size=4096 dist/server.js\"",
+        "start": "NODE_OPTIONS='--max-old-space-size=4096' node dist/server.js",
         "lint": "eslint \"src/**/*.ts\"",
         "clean": "rimraf .turbo node_modules dist",
         "test": "jest",
@@ -24,6 +24,7 @@
         "googleapis": "^126.0.1",
         "ioredis": "^5.3.2",
         "pino": "^8.15.1",
+        "pino-http": "^8.5.1",
         "pino-pretty": "^10.2.0"
     },
     "devDependencies": {
