Refactor email processing and enhance sequence reset functionality
- Updated the EmailProcessor to improve logging and error handling, providing clearer context during email job processing.
- Introduced a new endpoint for resetting sequences, utilizing the QueueApiClient to streamline the reset process and improve error feedback.
- Enhanced the rate limiter to implement a singleton pattern, ensuring consistent rate limit management across the application.
- Refactored the email service to improve tracking metadata handling and logging, ensuring better traceability of email jobs.
- Removed outdated email processing code and improved the structure of email tracking, enhancing maintainability and clarity.
- Updated package.json scripts for better development performance and memory management.

--- a/apps/queue/package.json
+++ b/apps/queue/package.json
@@ -5,7 +5,7 @@
     "type": "module",
     "scripts": {
         "build": "tsup",
-        "dev": "concurrently \"tsup --watch\" \"NODE_OPTIONS='--max-old-space-size=4096' nodemon --max-old-space-size=4096 dist/server.js\"",
+        "dev": "NODE_OPTIONS='--max-old-space-size=4096' tsup --watch",
         "start": "NODE_OPTIONS='--max-old-space-size=4096' node dist/server.js",
         "lint": "eslint \"src/**/*.ts\"",
         "clean": "rimraf .turbo node_modules dist",
