Enhance coding standards and refactor queue services
- Introduced comprehensive coding standards for TypeScript and Node.js, covering type safety, error handling, documentation, and testing practices.
- Updated package.json scripts to optimize memory usage and improve development experience.
- Refactored EmailProcessor and QueueService to enhance modularity and maintainability, removing outdated services and improving logging.
- Deleted unused files related to alert and error recovery services, streamlining the codebase.
- Improved error handling and logging across email processing and queue management for better traceability and debugging.
- Enhanced monitoring capabilities by integrating detailed metrics and health checks into the queue service.

-WIP

--- a/apps/queue/package.json
+++ b/apps/queue/package.json
@@ -4,11 +4,12 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "build": "tsup",
+        "build": "NODE_OPTIONS='--max-old-space-size=4096' tsup",
         "dev": "NODE_OPTIONS='--max-old-space-size=4096' tsup --watch",
         "start": "NODE_OPTIONS='--max-old-space-size=4096' node dist/server.js",
+        "dev:debug": "NODE_OPTIONS='--max-old-space-size=4096 --inspect' tsup --watch",
         "lint": "eslint \"src/**/*.ts\"",
-        "clean": "rimraf .turbo node_modules dist",
+        "clean": "rimraf .turbo node_modules dist .tsbuildinfo",
         "test": "jest",
         "typecheck": "tsc --noEmit"
     },
