Refactor development setup and enhance queue service functionality
- Updated nodemon configuration to watch 'src' instead of 'dist' and changed file extensions to 'ts,json' for improved TypeScript support.
- Modified package.json scripts for better development experience, including a new 'dev' script that builds and starts the application.
- Enhanced tsup configuration with splitting, treeshaking, and minification for optimized builds.
- Integrated memory monitoring into server initialization for better resource management.
- Refactored EmailProcessor to use upsert for step status updates, improving data integrity and error handling.
- Improved QueueService with periodic cleanup of jobs and enhanced logging for better monitoring and maintenance.

This commit streamlines the development process and enhances the robustness of the queue service.

--- a/apps/queue/package.json
+++ b/apps/queue/package.json
@@ -4,10 +4,10 @@
     "private": true,
     "type": "module",
     "scripts": {
+        "dev": "nodemon --watch src -e ts,json --exec \"npm run build && npm run start\"",
         "build": "NODE_OPTIONS='--max-old-space-size=4096' tsup",
-        "dev": "NODE_OPTIONS='--max-old-space-size=4096' tsup --watch",
-        "start": "NODE_OPTIONS='--max-old-space-size=4096' node dist/server.js",
-        "dev:debug": "NODE_OPTIONS='--max-old-space-size=4096 --inspect' tsup --watch",
+        "start": "node --expose-gc dist/server.js",
+        "dev:debug": "NODE_OPTIONS='--max-old-space-size=4096 --inspect' nodemon --watch src -e ts,json --exec \"npm run build && npm run start\"",
         "lint": "eslint \"src/**/*.ts\"",
         "clean": "rimraf .turbo node_modules dist .tsbuildinfo",
         "test": "jest",
