--- a/apps/queue/package.json
+++ b/apps/queue/package.json
@@ -4,18 +4,21 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "nodemon --watch src -e ts,json --exec \"npm run build && npm run start\"",
+        "dev": "NODE_OPTIONS='--max-old-space-size=4096' tsx watch src/server.ts",
         "build": "NODE_OPTIONS='--max-old-space-size=4096' tsup",
         "start": "node --expose-gc dist/server.js",
-        "dev:debug": "NODE_OPTIONS='--max-old-space-size=4096 --inspect' nodemon --watch src -e ts,json --exec \"npm run build && npm run start\"",
+        "dev:debug": "NODE_OPTIONS='--max-old-space-size=4096 --inspect' tsx watch --inspect src/server.ts",
         "lint": "eslint \"src/**/*.ts\"",
         "clean": "rimraf .turbo node_modules dist .tsbuildinfo",
         "test": "jest",
-        "typecheck": "tsc --noEmit"
+        "typecheck": "tsc --noEmit",
+        "dev-2": "nodemon --watch src -e ts,json --exec \"npm run build && npm run start\"",
+        "dev:debug-2": "NODE_OPTIONS='--max-old-space-size=4096 --inspect' nodemon --watch src -e ts,json --exec \"npm run build && npm run start\""
     },
     "dependencies": {
         "@mailjot/database": "*",
         "@mailjot/types": "*",
+        "@types/nodemailer": "^6.4.17",
         "bull": "^4.11.3",
         "cors": "^2.8.5",
         "date-fns": "^2.30.0",
@@ -26,20 +29,24 @@
         "ioredis": "^5.3.2",
         "pino": "^8.15.1",
         "pino-http": "^8.5.1",
-        "pino-pretty": "^10.2.0"
+        "pino-pretty": "^10.2.0",
+        "quoted-printable": "^1.0.1"
     },
     "devDependencies": {
         "@types/bull": "^4.10.0",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
         "@types/node": "^20.6.0",
+        "@types/quoted-printable": "^1.0.0",
         "concurrently": "^8.2.2",
         "eslint": "^8.49.0",
         "jest": "^29.7.0",
         "nodemon": "^3.0.2",
         "rimraf": "^5.0.5",
         "ts-jest": "^29.1.1",
+        "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
+        "tsx": "^4.7.0",
         "tsup": "^8.0.1",
         "typescript": "^5.2.2"
     }
