Refactor queue service structure and enhance module imports for improved organization
- Updated tsconfig.json to include new path mappings for services and routes, improving module resolution and organization.
- Refactored server.ts to utilize the new import paths, enhancing code clarity and maintainability.
- Removed outdated email processing files, including EmailProcessor, EmailService, and related helpers, streamlining the codebase and reducing complexity.
- Enhanced overall project structure by consolidating service imports and improving the organization of the queue service.

This commit focuses on refining the queue service architecture, improving module management, and enhancing code maintainability.

--- a/apps/queue/tsconfig.json
+++ b/apps/queue/tsconfig.json
@@ -26,6 +26,12 @@
             "@/lib/*": [
                 "./src/lib/*"
             ],
+            "@/services/*": [
+                "./src/services/*"
+            ],
+            "@/routes/*": [
+                "./src/routes/*"
+            ],
             "@/types/*": [
                 "./src/types/*"
             ],
