Refactor email scheduling service and update environment configurations
- Improved logging in EmailSchedulingService by simplifying debug statements for better clarity.
- Updated .env.example to replace NGROK_URL and PUBSUB_AUDIENCE with new URLs for enhanced service connectivity.
- Commented out subValue calculations in SequenceStats component to streamline the display of email statistics.
- Updated documentation in prompts/v10.md to mark sections related to sequence stats and email tracking integration as complete.

This commit focuses on refining the email scheduling service's logging, updating environment configurations, and enhancing the clarity of sequence statistics display.

--- a/apps/web/env/.env.example
+++ b/apps/web/env/.env.example
@@ -30,8 +30,8 @@ NEXT_PUBLIC_ENABLE_ANALYTICS=false
 NEXT_PUBLIC_ENABLE_BETA_FEATURES=true 
 
 # URLs
-NGROK_URL=https://0fe91def87050f474089edbeaa27c185.serveo.net
-PUBSUB_AUDIENCE=https://0fe91def87050f474089edbeaa27c185.serveo.net/api/gmail/notifications
+NGROK_URL=https://cobra-electric-thoroughly.ngrok-free.app
+PUBSUB_AUDIENCE=https://cobra-electric-thoroughly.ngrok-free.app/api/gmail/notifications
 
 # CRON
 CRON_SECRET=
