--- a/apps/queue/package.json
+++ b/apps/queue/package.json
@@ -30,7 +30,8 @@
         "pino": "^8.15.1",
         "pino-http": "^8.5.1",
         "pino-pretty": "^10.2.0",
-        "quoted-printable": "^1.0.1"
+        "quoted-printable": "^1.0.1",
+        "sinon": "^19.0.2"
     },
     "devDependencies": {
         "@types/bull": "^4.10.0",
@@ -38,6 +39,7 @@
         "@types/express": "^4.17.17",
         "@types/node": "^20.6.0",
         "@types/quoted-printable": "^1.0.0",
+        "@types/sinon": "^17.0.3",
         "concurrently": "^8.2.2",
         "eslint": "^8.49.0",
         "jest": "^29.7.0",
@@ -46,8 +48,8 @@
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.2",
         "ts-node-dev": "^2.0.0",
-        "tsx": "^4.7.0",
         "tsup": "^8.0.1",
+        "tsx": "^4.7.0",
         "typescript": "^5.2.2"
     }
 }
