--- a/apps/queue/package.json
+++ b/apps/queue/package.json
@@ -27,6 +27,7 @@
         "express": "^4.18.2",
         "googleapis": "^126.0.1",
         "ioredis": "^5.3.2",
+        "luxon": "^3.5.0",
         "pino": "^8.15.1",
         "pino-http": "^8.5.1",
         "pino-pretty": "^10.2.0",
@@ -37,6 +38,7 @@
         "@types/bull": "^4.10.0",
         "@types/cors": "^2.8.13",
         "@types/express": "^4.17.17",
+        "@types/luxon": "^3.4.2",
         "@types/node": "^20.6.0",
         "@types/quoted-printable": "^1.0.0",
         "@types/sinon": "^17.0.3",
