Refactor configuration management and service imports for improved clarity
- Added path mappings for configuration files in `tsconfig.json` to streamline imports.
- Deleted obsolete `config.ts`, `constants.ts`, and `timing-service.ts` files to reduce clutter and enhance maintainability.
- Updated service imports in `service-initializer.ts`, `queue-service.ts`, and `thread-processor.ts` to reflect the new configuration structure, ensuring consistency across the codebase.
- Refactored the contact processing service import to align with the new directory structure.

This commit focuses on enhancing the organization of configuration files and improving the clarity of service imports, contributing to a cleaner and more maintainable codebase.

--- a/apps/queue/tsconfig.json
+++ b/apps/queue/tsconfig.json
@@ -37,6 +37,12 @@
             ],
             "@/env": [
                 "./src/env.ts"
+            ],
+            "@/config/*": [
+                "./src/config/*"
+            ],
+            "@/config": [
+                "./src/config/index.ts"
             ]
         }
     },
