Enhance queue management and service structure with BullMQ integration
- Updated package dependencies to include @bull-board/api and bullmq for improved queue management.
- Refactored service initialization to utilize a new ServiceManager, streamlining service management and enhancing maintainability.
- Consolidated service imports and removed obsolete files, improving code organization and clarity.
- Implemented a unified service management system, integrating memory monitoring and rate limiting for better resource management.
- Enhanced error handling and logging throughout the queue processing workflow, ensuring better traceability and debugging capabilities.

This commit focuses on modernizing the queue management system by integrating BullMQ, reorganizing services for better maintainability, and improving overall error handling and logging mechanisms.

--- a/apps/queue/package.json
+++ b/apps/queue/package.json
@@ -32,7 +32,9 @@
         "pino-http": "^8.5.1",
         "pino-pretty": "^10.2.0",
         "quoted-printable": "^1.0.1",
-        "sinon": "^19.0.2"
+        "sinon": "^19.0.2",
+        "@bull-board/api": "^6.5.4",
+        "bullmq": "^5.34.5"
     },
     "devDependencies": {
         "@types/bull": "^4.10.0",
