--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 **/*log.txt
+**/*.log
 
 # env files (can opt-in for committing if needed)
 .env*
