Refactor environment variables and configuration settings
- Replaced all instances of NGROK_URL with TRACK_URL in configuration files and environment examples to standardize URL usage.
- Updated the .env.example files for both the queue and web applications to include new general and server configuration settings.
- Removed unused alert and error recovery configurations from the environment schema and related files, streamlining the codebase.
- Added TODO comments for future implementation of email alerts in monitoring configurations.

These changes enhance clarity and maintainability of the configuration settings across the project.

--- a/apps/queue/env/.env.example
+++ b/apps/queue/env/.env.example
@@ -1,3 +1,13 @@
+# General Configuration
+LOG_LEVEL=debug          # Options: debug, info, warn, error
+NODE_ENV=development     # Options: development, production, test
+APP_ENV=development     # Options: development, production, test
+
+# Server Configuration
+WEB_APP_URL=http://localhost:3000
+API_URL=http://localhost:3001
+PORT=3001
+
 # Database Configuration
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/coldjot_dev
 
@@ -7,25 +17,12 @@ REDIS_PORT=6379
 REDIS_PASSWORD=
 
 # Queue Configuration
-QUEUE_CONCURRENCY=5
 QUEUE_PREFIX=coldjot
 
-# Monitoring Configuration
-ALERT_EMAIL_TO=alerts@yourdomain.com
-ALERT_SLACK_WEBHOOK=https://hooks.slack.com/services/your/webhook/url
 
-# Error Recovery Configuration
-MAX_RETRIES=3
-RETRY_DELAY=60000        # 1 minute in milliseconds
-MAX_RETRY_DELAY=3600000  # 1 hour in milliseconds
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+GOOGLE_REDIRECT_URI=http://localhost:3001/api/auth/callback/google
 
-# General Configuration
-LOG_LEVEL=debug          # Options: debug, info, warn, error
-NODE_ENV=development     # Options: development, production, test
-APP_ENV=development     # Options: development, production, test
-
-# Server Configuration
-PORT=3001               # Default port for the queue service
-
-# Note: Replace all sensitive values with your actual configuration
-# Make sure to never commit actual secrets to version control 
+TRACK_URL=https://coldjot.loca.lt
