--- a/apps/web/env/.env.example
+++ b/apps/web/env/.env.example
@@ -30,7 +30,7 @@ NEXT_PUBLIC_ENABLE_ANALYTICS=false
 NEXT_PUBLIC_ENABLE_BETA_FEATURES=true 
 
 # URLs
-NGROK_URL=https://cobra-electric-thoroughly.ngrok-free.app
+TRACK_URL=https://cobra-electric-thoroughly.ngrok-free.app
 PUBSUB_AUDIENCE=https://cobra-electric-thoroughly.ngrok-free.app/api/gmail/notifications
 
 # CRON
