--- a/apps/web/turbo.json
+++ b/apps/web/turbo.json
@@ -41,7 +41,7 @@
                 "NEXTAUTH_URL",
                 "NEXT_PUBLIC_*",
                 "QUEUE_API_URL",
-                "NGROK_URL",
+                "TRACK_URL",
                 "PUBSUB_*",
                 "CRON_SECRET",
                 "GMAIL_*"
