--- a/packages/database/turbo.json
+++ b/packages/database/turbo.json
@@ -5,6 +5,7 @@
     "tasks": {
         "build": {
             "cache": false,
+            "persistent": false,
             "dependsOn": [
                 "^build",
                 "db:generate"
