Refactor build scripts and environment configurations for improved clarity and maintainability
- Updated build scripts in package.json to streamline the deployment process by filtering database-related tasks.
- Modified turbo.json to enhance task dependencies and caching settings for better build performance.
- Removed unused Redis environment variables from .env.example files across the web and database packages, simplifying configuration.
- Adjusted environment schema in src/env.ts to ensure necessary variables are clearly defined.
- Cleaned up database package by removing commented-out code and unnecessary configurations.

These changes contribute to a more organized and maintainable codebase, enhancing both development efficiency and clarity in configuration management.

--- a/apps/web/env/.env.example
+++ b/apps/web/env/.env.example
@@ -10,9 +10,6 @@ APOLLO_API_KEY=
 
 # Database
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/coldjot_dev
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=
 
 # Google
 GOOGLE_CLIENT_ID=
@@ -22,15 +19,10 @@ GOOGLE_REDIRECT_URI=
 # NextAuth
 NEXTAUTH_URL=http://localhost:3000
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+AUTH_TRUST_HOST=true
 QUEUE_API_URL="http://localhost:3001/api"
 
-
-# Feature Flags
-NEXT_PUBLIC_ENABLE_ANALYTICS=false
-NEXT_PUBLIC_ENABLE_BETA_FEATURES=true 
-
 # URLs
-TRACK_URL=https://cobra-electric-thoroughly.ngrok-free.app
 PUBSUB_AUDIENCE=https://cobra-electric-thoroughly.ngrok-free.app/api/gmail/notifications
 
 # CRON
