--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
         "dev": "APP_ENV=development turbo run dev",
         "dev:staging": "APP_ENV=staging turbo run dev",
         "dev:prod": "APP_ENV=production turbo run dev",
-        "build:dev": "APP_ENV=development turbo run build",
-        "build:staging": "APP_ENV=staging turbo run build",
-        "build:prod": "APP_ENV=production turbo run build",
+        "build:dev": "turbo run build --filter=@coldjot/database && turbo run db:deploy --filter=@coldjot/database",
+        "build:staging": "turbo run build --filter=@coldjot/database && turbo run db:deploy:staging --filter=@coldjot/database",
+        "build:prod": "turbo run build --filter=@coldjot/database && turbo run db:deploy:prod --filter=@coldjot/database",
         "start:dev": "APP_ENV=development turbo run start",
         "start:staging": "APP_ENV=staging turbo run start",
         "start:prod": "APP_ENV=production turbo run start",
@@ -26,7 +26,7 @@
         "db:logs": "docker-compose logs -f postgres",
         "db:migrate": "cd packages/database && dotenv -e .env -- npx prisma migrate dev",
         "db:push": "cd packages/database && dotenv -e .env -- npx prisma db push",
-        "db:reset": "cd packages/database && dotenv -e .env -- npx prisma migrate reset --force",
+        "db:reset": "cd packages/database && dotenv -e .env -- npx prisma migrate reset,--force",
         "services:up": "docker-compose up -d",
         "services:down": "docker-compose down",
         "dev:with-services": "npm run services:up && npm run dev"
